# BaxterReadsNumbers

./: BigNumberDecompose.py  CMakeLists.txt  README.md  number_decompose.py  package.xml
baxter_moveit_config/config/: kinematics.yaml
baxterpicknumber/: CMakeLists.txt  package.xml
baxterpicknumber/launch/: move_joint_target.launch
baxterpicknumber/src/: decompose.py  move_cartesianpath.py  move_joint_target.py  moveandpick.py  number_decompose.py  pixelconvert.py  pixelconvert2.py  test.py
camera_info_manager_node/: CMakeLists.txt  README.org  narrow_stereo.yaml  package.xml  setup.py
camera_info_manager_node/scripts/: camera_info_manager_node
camera_info_manager_node/src/camera_info_manager_node/: __init__.py  cam_info_node_wrapper.py
face_detection/: CMakeLists.txt  package.xml
face_detection/src/: face_rec.py  face_recognition.py  video_capture.py
number_rec/: CMakeLists.txt
number_rec/launch/: numberrecog.launch
number_rec/src/: vision.py  vision2.py
numberrec_ref_jordan/: package.xml
numberrec_ref_jordan/launch/: ar_tracker.launch  numberrecog.launch
numberrec_ref_jordan/src/: tester.py  vision.py  vision2.py  weights.csv
src/: locating.py  moveandpick.py  movement.py  vision.py
